@@ -1,5 +1,14 @@
 2015-11-24  Natalia Portillo  <claunia@claunia.com>
 
+	* SCSI/MMC/OPW.cs:
+	* SCSI/MMC/TrackInformation.cs:
+	* DiscImageChef.Decoders.csproj:
+	  Reorganized media-info command so only applicable
+	  information is requested based on what we are being informed
+	  about media type.
+
+2015-11-24  Natalia Portillo  <claunia@claunia.com>
+
 	* SCSI/MMC/DiscInformation.cs:
 	  Added decoding and prettifying READ DISC INFORMATION.
 
